@@ -2,7 +2,7 @@ name             = Modern-Perl
 author           = chromatic
 license          = Perl_5
 copyright_holder = chromatic@wgz.org
-copyright_year   = 20242424242424242424
+copyright_year   = 2024
 
 [AutoVersion]
 format = {{ cldr('1.yyyyMMdd') }}
