@@ -1,6 +1,7 @@
 Revision history for Modern::Perl
 
 {{$NEXT}}
+    - fix switch tests after Perl 5.41.4 removal of deprecated feature (RT #155822, Slaven Rezic)
 
 1.20240120 2024-01-20 12:15:09-08:00 America/Los_Angeles
     - fix tests for Perl < 5.26.0 (RT #151198, Slaven Rezic)
